--- a/Exercício 6.2
+++ b/Exercício 6.2
@@ -1,7 +1,6 @@
 #include<stdio.h>
-#include<string.h>
 
-void preenche(int l, int c, arr[100][100])
+void preenche(int l, int c, int arr[100][100])
 {
 	for(int i = 0; i<l; i++)
 		{
@@ -13,9 +12,9 @@ void preenche(int l, int c, arr[100][100])
 		}
 }
 
-float media(int l, int c, arr[100][100])
+float media(int l, int c, int arr[100][100])
 {
-	int soma = 0
+	int soma = 0;
 	for(int i = 0; i<l; i++)
 		{
 			for(int j = 0; j<c; j++)
