--- a/Exercício 4.2
+++ b/Exercício 4.2
@@ -1,35 +1,40 @@
-#include<stdio.h>
+#include <stdio.h>
 
-int ehprimo(int num)
+int ehprimo(int numero)
 {
-   int count = 0;
-   for(int i = 1; i<=num;i++)
-   {
-      if(num % i == 0)
-      {
-         count++;
-      }
-   }
-   if(count == 2)
-   {
-      return 1;
-   }
-   else
-   {
-      return 0;
-   }
+	int qtd =0;
+	int i;	
+
+	for(i=1; i<=numero;i++)
+		{
+			if (numero % i == 0)
+				{
+					qtd = qtd + 1;
+				}	
+		}
+	return qtd;
 }
+
+void todoprimo(int p)
+{
+	int qtd = 0, i;
+		
+	for(i=1; i<=p;i++)
+		{
+			if(ehprimo(i) == 2)
+				{
+					printf("\n %d", i);
+				}
+		}
+}
+
 int main (void)
 {
-   int max;
-   printf("Digite um valor para verificar o intervalo entre ele e 1 para descobrir os primos: ");
-   scanf("%d",&max);
-   for(int i = 1; i<=max; i++)
-   {
-   if(ehprimo(i) == 1)
-   {
-      printf("%d\n",i);
-   }
-   }
-   return 0;
+
+	int max;
+	printf("Digite o valor maximo: ");
+	scanf("%d", &max);
+	todoprimo(max);
+
+	return 0;
 }
